--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <i class="fa-solid fa-star filled"></i>
                             <i class="fa-regular fa-star unfilled"></i>
                             <small>4.5</small>
-                            <i class="fa-solid fa-clock">01:00</i>
+                            <i class="fa-solid fa-clock">&nbsp;01:00</i>
                         </div>
                     </div>
                     <div class="single">
@@ -108,7 +108,7 @@
                             <i class="fa-solid fa-star filled"></i>
                             <i class="fa-regular fa-star unfilled"></i>
                             <small>4.3</small>
-                            <i class="fa-solid fa-clock">02:00</i>
+                            <i class="fa-solid fa-clock">&nbsp;02:00</i>
                         </div>
                     </div>
                     <div class="single">
@@ -122,7 +122,7 @@
                             <i class="fa-solid fa-star filled"></i>
                             <i class="fa-regular fa-star unfilled"></i>
                             <small>4.0</small>
-                            <i class="fa-solid fa-clock">01:30</i>
+                            <i class="fa-solid fa-clock">&nbsp;01:30</i>
                         </div>
                     </div>
                 </div>
